# mancala-server

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  makefile
frontend/src/: App.jsx
src/: cli.rs  lib.rs  main.rs  mancala.rs  matchmaker.rs
src/mancala/: mod.rs  play_match.rs  tests.rs
src/server/: api.rs  app_state.rs  display.rs  login.rs  mod.rs  registering.rs
src/server/api/: display.rs  login.rs  register.rs
src/server/login/: login_handler.rs
static/: index.html
static/assets/: index-DQnyIegi.js
