[package]
name = "match-server"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
# Server dependencies
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
reqwest = { version = "0.12.12", features = ["json"] }

# Database dependencies
argon2 = "0.5.3"
rusqlite = "0.32.1"

# Error handling dependencies
color-eyre = "0.6.3"
thiserror = "2.0.9"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# CLI dependencies
clap = { version = "4.5.24", features = ["derive"] }

# Generic dependencies
rand = "0.8.5"

